--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -10,6 +10,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <form>
+      <input type="text" placeholder="movie title"/>
+      <input type="submit" value="Get Movie Info"/>
+    </form>
+      <h1>Pokemon</h1>
+      <dl>
+  	   <dt>Name</dt>
+  	   <dd id="name"></dd>
 
+  	   <dt>Ability</dt>
+  	   <dd id="ability"></dd>
+
+  	   <dt>Base Experience</dt>
+       <dd id="base_experience"></dd>
+     </dl>
   </body>
 </html>
