--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -10,11 +10,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="banner">
+      <img src="banner1.png" alt="banner">
+    </div>
+    <h1>a</h1>
     <form>
       <input type="text" placeholder="movie title"/>
       <input type="submit" value="Get Movie Info"/>
     </form>
-      <h1>Pokemon</h1>
+    <div class="pokemon_info">
+      <h3>Pokemon</h3>
       <dl>
   	   <dt>Name</dt>
   	   <dd id="name"></dd>
@@ -24,6 +29,10 @@
 
   	   <dt>Base Experience</dt>
        <dd id="base_experience"></dd>
-     </dl>
+
+       <dt>Image</dt>
+       <dd id="image"></dd>
+       </dl>
+     </div>
   </body>
 </html>
