--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -13,13 +13,16 @@
     <div class="banner">
       <img src="banner1.png" alt="banner">
     </div>
+
     <h1>a</h1>
+
     <form>
-      <input type="text" placeholder="movie title"/>
-      <input type="submit" value="Get Movie Info"/>
+      <input type="text" placeholder="Pokémon name"/>
+      <input type="submit" value="Find Pokémon"/>
     </form>
-    <div class="pokemon_info">
-      <h3>Pokemon</h3>
+
+    <div class="pokémon_info">
+      <h3>Pokémon</h3>
       <dl>
   	   <dt>Name</dt>
   	   <dd id="name"></dd>
@@ -33,6 +36,16 @@
        <dt>Image</dt>
        <dd id="image"></dd>
        </dl>
+     </div>
+
+     <button class="modal-buttons" id="openModal">See Pokémon</button>
+     <div id="modal">
+       <div id="modal-box">
+         <p>IMAGE OF POKEMON</p>
+         <div id="modal-footer">
+           <a class="modal-buttons" id="close" href="#">Close</a>
+         </div>
+       </div>
      </div>
   </body>
 </html>
