pokemon app completed

--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -22,7 +22,7 @@
     </form>
 
     <div class="pokémon_info">
-      <h3>Pokémon</h3>
+
       <dl>
   	   <dt>Name</dt>
   	   <dd id="name"></dd>
@@ -32,16 +32,13 @@
 
   	   <dt>Base Experience</dt>
        <dd id="base_experience"></dd>
-
-       <dt>Image</dt>
-       <dd id="image"></dd>
-       </dl>
-     </div>
+     </dl>
+    </div>
 
      <button class="modal-buttons" id="openModal">See Pokémon</button>
      <div id="modal">
        <div id="modal-box">
-         <p>IMAGE OF POKEMON</p>
+         <img src="" id="image">
          <div id="modal-footer">
            <a class="modal-buttons" id="close" href="#">Close</a>
          </div>
